update to examples v003

--- a/DP_models_examples.ipynb
+++ b/DP_models_examples.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "version 0.02\n",
+    "version 0.03\n",
     "(this is a pre-alpha release and the current version of DataPal.io does not support yet the functionalities presented in this document)"
    ]
   },
@@ -171,9 +171,7 @@
     "    def datapalio_interface(self, **kwargs):\n",
     "        \n",
     "        \"\"\"\n",
-    "        This method is used by DataPal.io to interact with the model. It receives the name of \n",
-    "        the pipe selected by the user and the input data. \n",
-    "        It returns a dictionary that contains the values of the predictions\n",
+    "        This is the method used by DataPal.io to interact with the model.\n",
     "        \n",
     "        Inputs:\n",
     "                \n",
@@ -181,31 +179,43 @@
     "        \n",
     "        - input_data (dictionary): dictionary that contains the input data. The keys of the dictionary \n",
     "        correspond to the names of the inputs specified in models_definition.json for the selected pipe.\n",
-    "        For each key we have an associated value: input value for variables and filename for files. \n",
+    "        Each key has an associated value. For the input variables the associated value is the value\n",
+    "        of the variable, whereas for the input files the associated value is its filename. \n",
     "        \n",
-    "        - input_files_dir (string): Relative path of the directory where the input files are stored.\n",
+    "        - input_files_dir (string): Relative path of the directory where the input files are stored\n",
+    "        (the algorithm has to read the input files from there).\n",
     "\n",
-    "        - output_files_dir (string): Relative path of the directory where the output files must be stored.\n",
+    "        - output_files_dir (string): Relative path of the directory where the output files must be stored\n",
+    "        (the algorithm must store the output files in there).\n",
     "        \n",
     "        Outputs:\n",
     "        \n",
     "        - output_data (dictionary): dictionary that contains the output data. The keys of the dictionary \n",
     "        correspond to the names of the outputs specified in models_definition.json for the selected pipe. \n",
-    "        For each key we have an associated value: input value for variables and filename for files.\n",
-    "        \n",
+    "        Each key has an associated value. For the output variables the associated value is the value\n",
+    "        of the variable, whereas for the output files the associated value is its filename.  \n",
+    "\n",
     "        \"\"\"\n",
     "        \n",
+    "        pipe_id = kwargs['pipe_id']\n",
     "        input_data = kwargs['input_data']\n",
     "        input_files_dir = kwargs['input_files_dir']\n",
     "        output_files_dir = kwargs['output_files_dir']\n",
-    "        pipe_id = kwargs['pipe_id']\n",
+    "        \n",
+    "        output_data = self.train_or_predict(pipe_id, input_data, input_files_dir, output_files_dir)\n",
+    "        \n",
+    "        return output_data\n",
+    "        \n",
+    "    \n",
+    "    def train_or_predict(self, pipe_id, input_data, input_files_dir, output_files_dir):\n",
+    "        \n",
+    "        \"\"\"\n",
+    "        Handles user requests.\n",
+    "        \n",
+    "        \"\"\"\n",
     "        \n",
     "        # pipes for prediction\n",
     "        if pipe_id in [0,1]:\n",
-    "            \n",
-    "            pipe_id = kwargs['pipe_id']\n",
-    "            input_data = kwargs['input_data']\n",
-    "            input_files_dir = kwargs['input_files_dir']\n",
     "\n",
     "            # load data\n",
     "            if pipe_id == 0:\n",
@@ -231,7 +241,6 @@
     "\n",
     "            elif pipe_id == 1:\n",
     "                # save output in csv file and return it\n",
-    "                output_files_dir = kwargs['output_files_dir']\n",
     "                filename = 'predictions.csv'\n",
     "                filepath = os.path.join(output_files_dir, filename)\n",
     "                df = pd.DataFrame(data=data, columns=self.feature_names)\n",
@@ -709,7 +718,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/user/PYTHON_VIRTUAL_ENV/lib/python2.7/site-packages/IPython/kernel/__main__.py:304: FutureWarning: comparison to `None` will result in an elementwise object comparison in the future.\n"
+      "/Users/user/PYTHON_VIRTUAL_ENV/lib/python2.7/site-packages/IPython/kernel/__main__.py:313: FutureWarning: comparison to `None` will result in an elementwise object comparison in the future.\n"
      ]
     }
    ],
@@ -803,7 +812,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'iris type': 'Iris-setosa'}\n"
+      "{'iris type': 'Iris-versicolor'}\n"
      ]
     }
    ],
@@ -947,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -969,9 +978,7 @@
     "    def datapalio_interface(self, **kwargs):\n",
     "        \n",
     "        \"\"\"\n",
-    "        This method is used by DataPal.io to interact with the model. It receives the name of \n",
-    "        the pipe selected by the user and the input data. \n",
-    "        It returns a dictionary that contains the values of the predictions\n",
+    "        This is the method used by DataPal.io to interact with the model.\n",
     "        \n",
     "        Inputs:\n",
     "                \n",
@@ -979,18 +986,22 @@
     "        \n",
     "        - input_data (dictionary): dictionary that contains the input data. The keys of the dictionary \n",
     "        correspond to the names of the inputs specified in models_definition.json for the selected pipe.\n",
-    "        For each key we have an associated value: input value for variables and filename for files. \n",
+    "        Each key has an associated value. For the input variables the associated value is the value\n",
+    "        of the variable, whereas for the input files the associated value is its filename. \n",
     "        \n",
-    "        - input_files_dir (string): Relative path of the directory where the input files are stored.\n",
+    "        - input_files_dir (string): Relative path of the directory where the input files are stored\n",
+    "        (the algorithm has to read the input files from there).\n",
     "\n",
-    "        - output_files_dir (string): Relative path of the directory where the output files must be stored.\n",
+    "        - output_files_dir (string): Relative path of the directory where the output files must be stored\n",
+    "        (the algorithm must store the output files in there).\n",
     "        \n",
     "        Outputs:\n",
     "        \n",
     "        - output_data (dictionary): dictionary that contains the output data. The keys of the dictionary \n",
     "        correspond to the names of the outputs specified in models_definition.json for the selected pipe. \n",
-    "        For each key we have an associated value: input value for variables and filename for files.\n",
-    "        \n",
+    "        Each key has an associated value. For the output variables the associated value is the value\n",
+    "        of the variable, whereas for the output files the associated value is its filename.  \n",
+    "\n",
     "        \"\"\"\n",
     "            \n",
     "        pipe_id = kwargs['pipe_id']\n",
@@ -998,6 +1009,18 @@
     "        input_files_dir = kwargs['input_files_dir']\n",
     "        output_files_dir = kwargs['output_files_dir']\n",
     "        \n",
+    "        output_data = self.train_or_predict(pipe_id, input_data, input_files_dir, output_files_dir)\n",
+    "        \n",
+    "        return output_data\n",
+    "        \n",
+    "\n",
+    "    def train_or_predict(self, pipe_id, input_data, input_files_dir, output_files_dir):\n",
+    "        \n",
+    "        \"\"\"\n",
+    "        Handles user requests.\n",
+    "        \n",
+    "        \"\"\"\n",
+    "            \n",
     "        if pipe_id in [0,1]:\n",
     "            # load data\n",
     "            # if one by one predictions\n",
@@ -1033,7 +1056,6 @@
     "\n",
     "            elif pipe_id == 1:\n",
     "                # save output in csv file and return it\n",
-    "                output_files_dir = kwargs['output_files_dir']\n",
     "                filename = 'predictions.csv'\n",
     "                filepath = os.path.join(output_files_dir, filename)\n",
     "                df = data_args['original_data_df']\n",
@@ -1548,7 +1570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -1564,7 +1586,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/user/PYTHON_VIRTUAL_ENV/lib/python2.7/site-packages/IPython/kernel/__main__.py:295: FutureWarning: comparison to `None` will result in an elementwise object comparison in the future.\n"
+      "/Users/user/PYTHON_VIRTUAL_ENV/lib/python2.7/site-packages/IPython/kernel/__main__.py:308: FutureWarning: comparison to `None` will result in an elementwise object comparison in the future.\n"
      ]
     }
    ],
@@ -1600,7 +1622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -1643,7 +1665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -1685,7 +1707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -1730,7 +1752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -1742,7 +1764,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1803,7 +1825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -1826,9 +1848,7 @@
     "    def datapalio_interface(self, **kwargs):\n",
     "        \n",
     "        \"\"\"\n",
-    "        This method is used by DataPal.io to interact with the model. It receives the name of \n",
-    "        the pipe selected by the user and the input data. \n",
-    "        It returns a dictionary that contains the values of the predictions\n",
+    "        This is the method used by DataPal.io to interact with the model.\n",
     "        \n",
     "        Inputs:\n",
     "                \n",
@@ -1836,25 +1856,41 @@
     "        \n",
     "        - input_data (dictionary): dictionary that contains the input data. The keys of the dictionary \n",
     "        correspond to the names of the inputs specified in models_definition.json for the selected pipe.\n",
-    "        For each key we have an associated value: input value for variables and filename for files. \n",
+    "        Each key has an associated value. For the input variables the associated value is the value\n",
+    "        of the variable, whereas for the input files the associated value is its filename. \n",
     "        \n",
-    "        - input_files_dir (string): Relative path of the directory where the input files are stored.\n",
+    "        - input_files_dir (string): Relative path of the directory where the input files are stored\n",
+    "        (the algorithm has to read the input files from there).\n",
     "\n",
-    "        - output_files_dir (string): Relative path of the directory where the output files must be stored.\n",
+    "        - output_files_dir (string): Relative path of the directory where the output files must be stored\n",
+    "        (the algorithm must store the output files in there).\n",
     "        \n",
     "        Outputs:\n",
     "        \n",
     "        - output_data (dictionary): dictionary that contains the output data. The keys of the dictionary \n",
     "        correspond to the names of the outputs specified in models_definition.json for the selected pipe. \n",
-    "        For each key we have an associated value: input value for variables and filename for files.\n",
-    "        \n",
+    "        Each key has an associated value. For the output variables the associated value is the value\n",
+    "        of the variable, whereas for the output files the associated value is its filename.  \n",
+    "\n",
     "        \"\"\"\n",
     "            \n",
     "        pipe_id = kwargs['pipe_id']\n",
     "        input_data = kwargs['input_data']\n",
     "        input_files_dir = kwargs['input_files_dir']\n",
     "        output_files_dir = kwargs['output_files_dir']\n",
+    "\n",
+    "        output_data = self.train_or_predict(pipe_id, input_data, input_files_dir, output_files_dir)\n",
     "        \n",
+    "        return output_data\n",
+    "        \n",
+    "    \n",
+    "    def train_or_predict(self, pipe_id, input_data, input_files_dir, output_files_dir):\n",
+    "        \n",
+    "        \"\"\"\n",
+    "        Handles user requests.\n",
+    "        \n",
+    "        \"\"\"\n",
+    "            \n",
     "        if pipe_id in [0,1]:\n",
     "            # load data\n",
     "            # if one by one predictions\n",
@@ -1890,7 +1926,6 @@
     "\n",
     "            elif pipe_id == 1:\n",
     "                # save output in csv file and return it\n",
-    "                output_files_dir = kwargs['output_files_dir']\n",
     "                filename = 'predictions.csv'\n",
     "                filepath = os.path.join(output_files_dir, filename)\n",
     "                df = data_args['original_data_df']\n",
@@ -2511,7 +2546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -2527,7 +2562,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/user/PYTHON_VIRTUAL_ENV/lib/python2.7/site-packages/IPython/kernel/__main__.py:296: FutureWarning: comparison to `None` will result in an elementwise object comparison in the future.\n"
+      "/Users/user/PYTHON_VIRTUAL_ENV/lib/python2.7/site-packages/IPython/kernel/__main__.py:309: FutureWarning: comparison to `None` will result in an elementwise object comparison in the future.\n"
      ]
     }
    ],
@@ -2563,7 +2598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -2599,7 +2634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -2608,7 +2643,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'success': '0.0933333333333'}\n"
+      "{'success': '0.113333333333'}\n"
      ]
     }
    ],
@@ -2641,7 +2676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -2679,7 +2714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -2691,7 +2726,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
